--- a/index.html
+++ b/index.html
@@ -5,10 +5,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
     <title>fresh food</title>
+
 </head>
 
 <body>
+    <section class="first">
+        <div class="top">
+            <h1>We are <span class="r">RADICAL
+                </span> </h1>
+            <H3>Bering Happiness</H3>
+            <p>Farmico is an Agtech startup that introduces technology to the farmers. It has also reimagined the food
+                supply chain to reduce food wastage and eradicate food adulteration, malnutrition. Farmico provides
+                fresh locally produced food to the consumers.</p><br>
+
+            <a class="button1">Read More</a>
+            <a class="button2">Shop Now</a>
+        </div>
+
+        <div class="people">
+            <img src="image/p 2.jpg" alt="farmer">
+        </div>
+
+    </section>
+
+
+    <section>
+        <h4>Radical products</h4>
+        <h2>BROWSE OUR CATEGORIES</h2>
+        <div class="shadow">
+            <img src="image/new v.jpg" alt="vegetable">
+            <h2>fresh vegetable</h2>
+        </div>
+
+        <div class="shadow">
+            <img src="image/v2.png" alt="fruits">
+            <h2>fresh fruits</h2>
+        </div>
+
+        <div class="shadow">
+            <img src="image/vf.png" alt="others">
+            <h2>Others</h2>
+
+        </div>
+    </section>
+
+    <section>
+        <div class="footer">
+            <h3>Food Network</h3>
+            <p>Stay Tune With RADICAL</p>
+            <br>
+            <h6>Rehnuma@2021.All Rights Reserved.</h6>
+        </div>
+    </section>
+
+
 
 </body>
 
